# StockAdvisor

./: README.md
StockAdvisor/: .gitignore  pyproject.toml  test_fmp_connection.py  test_provider.py
StockAdvisor/data/: fundamentals.example.json
StockAdvisor/src/stockbot/cli/: apply_ticker_mapping.py  fetch_fundamentals_for_holdings.py  import_nordnet_report.py  make_price_chart.py  portfolio_summary.py  try_saxo.py  valuate.py
StockAdvisor/src/stockbot/config/: settings.py
StockAdvisor/src/stockbot/fundamentals/: fmp_provider.py  local_provider.py  models.py  symbol_resolver.py  yfinance_provider.py
StockAdvisor/src/stockbot/portfolio/: holding.py  nordnet_import.py  nordnet_report_import.py  saxo_holdings.py  ticker_mapping.py  watchlist.py
StockAdvisor/src/stockbot/saxo/: client.py  endpoints.py  instruments.py  prices.py  universe.py
StockAdvisor/src/stockbot/valuation/: dcf.py  model_selector.py  models.py  reverse_dcf.py  service.py
StockAdvisor/src/stockbot/viz/: price_chart.py
StockAdvisor/tests/: test_dcf.py  test_fetch_fundamentals_for_holdings.py  test_fmp_provider.py  test_fundamentals_local_provider.py  test_model_selector.py  test_nordnet_report_import.py  test_reverse_dcf.py  test_symbol_resolver.py  test_symbol_resolver_debug.py  test_symbol_resolver_fallback.py  test_symbol_resolver_normalization.py  test_ticker_mapping.py  test_valuation_service.py  test_yfinance_provider.py
