[project]
name = "stockadvisor"
version = "0.1.0"
description = "StockAdvisor: valuation and visualization engine"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
