[project]
name = "stockadvisor"
version = "0.1.0"
description = "StockAdvisor: valuation and visualization engine"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "yfinance>=0.2.54",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
